--- a/code/app/src/main/res/layout/inc_search_bar.xml
+++ b/code/app/src/main/res/layout/inc_search_bar.xml
@@ -31,4 +31,6 @@
         style="@style/ButtonPrimary"
         android:text="@string/search"
         />
+
+    <Space style="@style/SpaceXLarge" />
 </LinearLayout>
