--- a/code/app/src/main/res/layout/fragment_plan_detail.xml
+++ b/code/app/src/main/res/layout/fragment_plan_detail.xml
@@ -7,110 +7,19 @@
     android:padding="@dimen/wrapper_padding"
     tools:context=".view.fragments.PlanDetailFragment">
 
-    <!-- mealPlan header -->
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/goalRibbonTextView"
-            style="@style/TextLight"
-            android:text="@string/goal"
-            android:textColor="@color/colorTertiary" />
-
-        <Space style="@style/SpaceMedium" />
-
-        <Button
-            style="@style/ButtonPrimary"
-            android:padding="@dimen/space_x_small"
-            android:text="@string/unset" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            style="@style/TextBold"
-            android:text="@string/plan_name"
-            android:textSize="@dimen/text_xx_large" />
-
-        <Space style="@style/SpaceMedium" />
-
-        <TextView
-            style="@style/TextLight"
-            android:text="@string/_5"
-            android:textSize="@dimen/text_xx_large" />
-
-        <Space style="@style/SpaceMedium" />
-
-        <ImageButton
-            android:layout_width="@dimen/text_large"
-            android:layout_height="@dimen/text_large"
-            android:backgroundTint="@android:color/transparent"
-            android:padding="0dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_pen" />
-    </LinearLayout>
-
-    <Space style="@style/SpaceMedium" />
-
-    <TextView
-        style="@style/TextLight"
-        android:text="@string/recipe_number" />
-
-    <Space style="@style/SpaceXLarge" />
-
-    <!-- mealPlan content -->
-    <Button
-        android:id="@+id/btnAddToTop"
-        style="@style/ButtonBase"
-        android:text="@string/add_to_top" />
-
-    <LinearLayout
-        android:id="@+id/linearRecipeSearchFilters"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <include
-            layout="@layout/component_search_bar"
-            android:id="@+id/incSearchBar"
-            />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerRecipeCategories"
-            style="@style/ButtonField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerRecipeSubCategories"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <Space style="@style/SpaceXLarge" />
+    <include
+        android:id="@+id/incPlanHeader"
+        layout="@layout/inc_plan_detail_header" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerRecipeList"
+        android:id="@+id/recyclerAddedRecipes"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <Space style="@style/SpaceXLarge" />
+    <include
+        android:id="@+id/incBotButtons"
+        layout="@layout/inc_bottom_buttons"
+        />
 
-    <Button
-        android:id="@+id/btnAddToBottom"
-        style="@style/ButtonBase"
-        android:text="@string/add_top_bottom" />
-    <Space style="@style/SpaceMedium" />
-    <Button
-        style="@style/ButtonField"
-        android:text="@string/back" />
 </LinearLayout>
