--- a/code/app/src/main/res/layout/recycler_item_recipe_editor.xml
+++ b/code/app/src/main/res/layout/recycler_item_recipe_editor.xml
@@ -4,6 +4,7 @@
     android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/space_large"
     android:orientation="vertical">
 
     <LinearLayout
@@ -25,6 +26,7 @@
                 android:src="@drawable/login_background" />
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/imgCheckedIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -36,14 +38,16 @@
         <Space style="@style/SpaceLarge" />
 
         <TextView
+
             android:id="@+id/txtName"
-            style="@style/TextSemiBold"
+            style="@style/TextLight"
             android:text="@string/recipe_name"
-            android:textSize="@dimen/text_large" />
+            android:textSize="@dimen/text_x_small" />
 
         <Space style="@style/SpaceExpand"/>
 
         <ImageButton
+            android:visibility="gone"
             android:id="@+id/btnEdit"
             android:layout_width="@dimen/text_large"
             android:layout_height="@dimen/text_large"
@@ -62,12 +66,12 @@
             android:padding="0dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_plus"
-            android:visibility="gone"
             app:tint="@color/colorPrimary" />
     </LinearLayout>
 
     <!-- action butons -->
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/linearEditingActions"
         android:orientation="horizontal"
         android:layout_width="match_parent"
