--- a/code/app/src/main/res/layout/recycler_item_recipe_editor.xml
+++ b/code/app/src/main/res/layout/recycler_item_recipe_editor.xml
@@ -16,7 +16,9 @@
         <FrameLayout
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:backgroundTint="@color/colorBase">
+            android:backgroundTint="@color/colorBase"
+            android:layout_marginEnd="@dimen/space_large"
+            >
 
             <ImageView
                 android:id="@+id/imgThumb"
@@ -35,30 +37,16 @@
                 android:src="@drawable/ic_check" />
         </FrameLayout>
 
-        <Space style="@style/SpaceLarge" />
-
         <TextView
-
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:id="@+id/txtName"
             style="@style/TextLight"
             android:text="@string/recipe_name"
+            android:layout_marginEnd="@dimen/space_medium"
             android:textSize="@dimen/text_x_small" />
 
-        <Space style="@style/SpaceExpand"/>
-
-        <ImageButton
-            android:visibility="gone"
-            android:id="@+id/btnEdit"
-            android:layout_width="@dimen/text_large"
-            android:layout_height="@dimen/text_large"
-            android:backgroundTint="@android:color/transparent"
-            android:padding="0dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_pen"
-            app:tint="@color/colorPrimary" />
-
-
-        <ImageButton
+       <ImageButton
             android:id="@+id/btnAdd"
             android:layout_width="@dimen/text_large"
             android:layout_height="@dimen/text_large"
