Feat: meal Plan edit and set goal

--- a/code/app/src/main/res/layout/inc_plan_detail_header.xml
+++ b/code/app/src/main/res/layout/inc_plan_detail_header.xml
@@ -14,6 +14,7 @@
         <TextView
             android:id="@+id/txtGoalRibbon"
             style="@style/TextLight"
+            android:visibility="gone"
             android:layout_marginEnd="@dimen/space_medium"
             android:text="@string/goal"
             android:textColor="@color/colorTertiary" />
@@ -21,6 +22,7 @@
         <Button
             android:id="@+id/btnToggleSetGoal"
             style="@style/ButtonPrimary"
+            android:layout_width="wrap_content"
             android:padding="@dimen/space_x_small"
             android:text="@string/set_as_goal" />
     </LinearLayout>
